--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-dist": "^5.17.14",
     "swagger-ui-express": "^5.0.1"
   }
 }
